--- a/static/main.css
+++ b/static/main.css
@@ -1,11 +1,11 @@
 body {
-  background: #fafafa;
-  color: #333333;
+  background: #202124;
+  color: #2b2c2e;
   margin-top: 5rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #444444;
+  color: #F8F8FF;
 }
 
 .bg-steel {
@@ -13,11 +13,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .site-header .navbar-nav .nav-link {
-  color: #cbd5db;
+  color: #ffffff;
 }
 
 .site-header .navbar-nav .nav-link:hover {
-  color: #ffffff;
+  color: #F8F8FF;
 }
 
 .site-header .navbar-nav .nav-link.active {
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .content-section {
-  background: #ffffff;
+  background: #202124;
   padding: 10px 20px;
   border: 1px solid #dddddd;
   border-radius: 3px;
@@ -33,7 +33,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .article-title {
-  color: #444444;
+  color: #ffffff;
 }
 
 a.article-title:hover {
